--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="btn_reload">Reload</string>
 
     <string name="title_details">Movie Details</string>
+    <string name="tv_trailers_label">Trailers:</string>
 </resources>
