--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,17 +1,17 @@
 <resources>
     <string name="app_name">Popular Movies</string>
-    <string name="sort_popular">Sort by Popularity</string>
-    <string name="sort_rating">Sort by Rating</string>
+    <string name="sort_popular">Popular</string>
+    <string name="sort_top_rated">Top Rated</string>
     <string name="sort_favorites">Favorites</string>
-    <string name="movie_poster_description">Movie Poster</string>
-    <string name="favorite_star_description">Favorite Star</string>
     <string name="tv_net_error">No Internet Connection!</string>
     <string name="btn_reload">Reload</string>
+    <string name="movie_poster_description">Movie Poster</string>
 
     <string name="title_details">Movie Details</string>
     <string name="tv_trailers_label">Trailers:</string>
     <string name="tv_reviews_label">Reviews:</string>
     <string name="tv_review_author">A review by %1$s:</string>
+    <string name="favorite_star_description">Favorite Star</string>
 
     <string name="pref_sort_key" translatable="false">sort</string>
 </resources>
